##Text encoding: utf-8

2008-07-08  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/view.cc: reimplement atom change using keyboard which was
	broken since the removal of the background rectangle.

2008-07-07  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/application.cc: fixed a couple of file opening issues.
	* libs/gcp/fragment-atom.cc: set ShowSymbol to true so that carbon atoms
	are correctly taken into account.

2008-07-05  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/fragment.cc: Use gcu::Formula to invert the formula when needed.
	* libs/gcu/formula.cc: elements can now export text instead of markup.
	* libs/gcu/formula.h: ditto.

2008-07-03  Jean Bréfort  <jean.brefort@normalesup.org>
	* plugins/loaders/cdx/cdx.cc: fixed generic group loading.

2008-06-22  Jean Bréfort  <jean.brefort@normalesup.org>
	* configure.ac: post release version bump (0.9.5).

2008-06-22  Jean Bréfort  <jean.brefort@normalesup.org>
	* Makefile.am: use intltoo >= 0.40.0.
	* configure.ac: ditto.

2008-06-22  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/fragment-atom.cc: fixed bounds evaluation.
	* libs/gcp/window.cc: correctly exit when requested.
	* plugins/loaders/cdx/cdx.cc: fix various new issues.
	* programs/table/gchemtable-curve.cc: clear the guru when done.
	* programs/table/gchemtable-curve.h: ditto.

2008-06-21  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/canvas/gcp-canvas-group.c: fixed parent class.
	* libs/gcp/atom.cc: fix canvas item bounds.
	* libs/gcp/fragment-residue.cc: fixed a load time crasher.
	* libs/gcp/fragment.cc: fix canvas item bounds.
	* libs/gcu/molecule.cc: enhance cdx file loading.
	* plugins/loaders/cdx/cdx.cc: ditto.

2008-06-15  Jean Bréfort  <jean.brefort@normalesup.org>
	* glade/table/curve.glade: set a default title.
	* libs/gcu/application.cc: clear all dialogs before exiting to avoid
	a bad goffice shutdown.
	* libs/gcu/dialog-owner.cc: add ClearDialogs method.
	* libs/gcu/dialog-owner.h: ditto.